# marave

./: CREDITS  ProjectHome.md  README  Ui_searchwidget.py  main.py  main.spec  marave.nsi  marave.spec  prefs.ui  prefsUi.py  setup.py
branches/0.1/: CREDITS  README
branches/0.1.1/: setup.py
branches/0.2/: main.spec
branches/0.3/: README
branches/0.4/: main.spec
branches/0.4.1/: setup.py
branches/0.5/: README  marave.nsi
branches/0.5.1/: README  marave.spec  setup.py
branches/0.6/: marave.nsi
branches/0.7/: marave.spec
branches/bdgraue/: build.bat  marave.nsi  marave.spec
marave/: Makefile  README.html  Ui_prefs.py  Ui_searchreplacewidget.py  highlighter.py  icons_rc.py  main.py  marave_de.ts  marave_es.qm  marave_es.ts  marave_he.ts  prefs.ui  searchreplwidget.ui  searchwidget.ui  spelltextedit.py  textedit.py
marave/editor/: numberbar.py  spelltextedit.py
marave/highlight/: source-highlight-qt.sip
marave/plugins/: plugins.py  smarty.py
marave/stylesheets/: default  small  thin
marave/themes/: curls  dune  gray  terminal green  winter
marave/translations/: Makefile  marave_cs.ts  marave_de.qm  marave_de.ts  marave_el.ts  marave_es.qm  marave_es.ts  marave_he.qm  marave_he.ts  marave_hu.qm  marave_hu.ts  marave_it.qm  marave_it.ts  marave_pl.qm  marave_pl.ts
trunk/: CREDITS  README  Ui_searchwidget.py  icons_rc.py  main.py  marave.nsi  marave.spec  prefsUi.py  radios.txt  searchwidget.ui  setup.py  spelltextedit.py
trunk/marave/: Makefile  README.html  Ui_prefs.py  Ui_searchreplacewidget.py  icons.qrc  icons_rc.py  main.py  prefs.ui  (+7 more)
(+87 files in other folders)
