[General]
font=@Variant(\0\0\0@\0\0\0\x14\0\x44\0r\0o\0i\0\x64\0 \0S\0\x61\0n\0s@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
fontsize=9
click=@Invalid()
station=http://scfire-mtc-aa06.stream.aol.com:80/stream/1018
bgcolor=@Invalid()
background=The Beach.jpg
buttonstyle=0
lang=@Invalid()
editoropacity=81
fontcolor=#000000
x=280
y=128
w=688
h=629
